--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_gitbook_test:
     # Applies to all files under models/example/
-    example:
+    staging:
       materialized: view
+      +schema: staging
