create folder structure

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,3 +37,11 @@ models:
     staging:
       materialized: view
       +schema: staging
+    
+    marts:
+      materialized: view
+      +schema: marts
+
+      core:
+      materialized: view
+      +schema: core
